--- a/index.html
+++ b/index.html
@@ -855,16 +855,16 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script type="module" src="config/config-client.js"></script>
-    <script type="module" src="js/reservation.js"></script>
-    <script type="module" src="js/contact.js"></script>
-    <script src="js/current-year.js"></script>
+    <script type="module" src="/config/config-client.js"></script>
+    <script type="module" src="/js/reservation.js"></script>
+    <script type="module" src="/js/contact.js"></script>
+    <script src="/js/current-year.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="/js/aos-animations.js"></script>
-    <script src="js/swiper.js"></script>
-    <script src="js/video.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/swiper.js"></script>
+    <script src="/js/video.js"></script>
+    <script src="/js/main.js"></script>
 
 </body>
 
