refactor CORS and frontend API config via env variables

--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
     <script src="/js/swiper.js"></script>
     <script src="/js/video.js"></script>
     <script src="/js/main.js"></script>
-
+    <script src="/env.js"></script>
 </body>
 
 </html>
