fix: improved env.js file and allowed downloading allowedOrigins files in server.js file

--- a/index.html
+++ b/index.html
@@ -855,6 +855,7 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://gamehaven-fvun.onrender.com/env.js"></script>
     <script type="module" src="/config/config-client.js"></script>
     <script type="module" src="/js/reservation.js"></script>
     <script type="module" src="/js/contact.js"></script>
@@ -865,7 +866,6 @@
     <script src="/js/swiper.js"></script>
     <script src="/js/video.js"></script>
     <script src="/js/main.js"></script>
-    <script src="/env.js"></script>
 </body>
 
 </html>
