--- a/index.html
+++ b/index.html
@@ -856,16 +856,16 @@
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://gamehaven-fvun.onrender.com/env.js"></script>
-    <script type="module" src="/public/config/config-client.js"></script>
-    <script type="module" src="/public/js/reservation.js"></script>
-    <script type="module" src="/public/js/contact.js"></script>
-    <script src="/public/js/current-year.js"></script>
+    <script type="module" src="/config/config-client.js"></script>
+    <script type="module" src="/js/reservation.js"></script>
+    <script type="module" src="/js/contact.js"></script>
+    <script src="/js/current-year.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="/public/js/aos-animations.js"></script>
-    <script src="/public/js/swiper.js"></script>
-    <script src="/public/js/video.js"></script>
-    <script src="/public/js/main.js"></script>
+    <script src="/js/aos-animations.js"></script>
+    <script src="/js/swiper.js"></script>
+    <script src="/js/video.js"></script>
+    <script src="/js/main.js"></script>
 </body>
 
 </html>
