fix HTML validation issues, remove duplicate IDs, update reservation.js to match changed input IDs (reservationEmail)

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@tabler/icons-webfont@latest/dist/tabler-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="css/main.css">
@@ -154,6 +154,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
 
         <section id="pc-gaming-haven" class="pc-gaming-haven py-5">
@@ -317,7 +318,7 @@
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                         data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon"><i class="ti ti-circle-chevron-left-filled"></i></i>
+                        <span class="carousel-control-prev-icon"><i class="ti ti-circle-chevron-left-filled"></i>
                         </span>
                         <span class="visually-hidden">Previous</span>
                     </button>
@@ -447,8 +448,8 @@
                                     <div class="invalid-feedback" id="nameError"></div>
                                 </div>
                                 <div class="mb-3">
-                                    <label for="email" class="form-label">Adres e-mail:</label>
-                                    <input type="email" id="email" class="form-control" required>
+                                    <label for="reservationEmail" class="form-label">Adres e-mail:</label>
+                                    <input type="email" id="reservationEmail" class="form-control" required>
                                     <div class="invalid-feedback" id="emailError"></div>
                                 </div>
                                 <div class="mb-3">
@@ -734,7 +735,6 @@
 
                 </div>
             </div>
-            </div>
 
         </section>
 
@@ -798,7 +798,7 @@
                         <div class="map-container">
                             <iframe
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2443.600123456789!2d21.01234567891234!3d52.2296756!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTLCsDEzJzQ2LjgiTiAyMcKwMDAnNDQuMyJF!5e0!3m2!1spl!2spl!4v1631234567890!5m2!1spl!2spl"
-                                width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                                title="Mapa lokalizacji" style="border:0;" allowfullscreen loading="lazy"></iframe>
                         </div>
                     </div>
 
@@ -811,8 +811,8 @@
                             </div>
                             <form id="contact-form-id">
                                 <div class="mb-3">
-                                    <label for="email" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="email" name="email"
+                                    <label for="contactEmail" class="form-label">Email</label>
+                                    <input type="email" class="form-control" id="contactEmail" name="email"
                                         placeholder="Twój adres email" required>
                                 </div>
                                 <div class="mb-3">
