improvement of the library for flatpickr

--- a/public/index.html
+++ b/public/index.html
@@ -903,7 +903,9 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
         defer></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/flatpickr" defer></script>
+    <script type="module">
+        import flatpickr from 'https://cdn.skypack.dev/flatpickr';
+    </script>
     <script src="https://gamehaven-fvun.onrender.com/env.js" defer></script>
 
     <script type="module" src="/config/config-client.js"></script>
