--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,8 @@
     <nav id="navbar" class="navbar navbar-expand-lg position-fixed top-0 w-100">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/logoGameHaven.png" alt="logo strony GameHaven" loading="lazy">
+                <img src="assets/logoGameHaven.png" alt="Logo strony GameHaven" width="150" height="auto"
+                    fetchpriority="high" decoding="async" />
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
