added aria-labels to image links

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="hero-shadow"></div>
-        <a href="#aboutus"> <i class="ti ti-chevrons-down"></i>
+        <a href="#aboutus" aria-label="Przewiń do sekcji Poznaj nas"> <i class="ti ti-chevrons-down"></i>
         </a>
         <button class="toggle-background btn btn-outline-light mt-3 text-uppercase d-xl-block d-none">zmień
             tło na obraz</button>
@@ -220,7 +220,7 @@
                                 <img src="assets/graphics-card-small.jpg" class="card-img-top "
                                     alt="gaming computer with powerful graphics card">
                                 <div class="card-body">
-                                    <h5 class="card-title">Karty graficzne</h5>
+                                    <h4 class="card-title">Karty graficzne</h4>
                                     <p class="card-text">
                                         Wydajne karty graficzne, które poradzą sobie z <strong>najbardziej wymagającymi
                                             grami</strong>. <br>
@@ -235,7 +235,7 @@
                             <div class="card me-3 h-100">
                                 <img src="assets/cpu-small.jpg" class="card-img-top" alt="gaming computer with cpu">
                                 <div class="card-body">
-                                    <h5 class="card-title">Procesory z Intela lub AMD</h5>
+                                    <h4 class="card-title">Procesory z Intela lub AMD</h4>
                                     <p class="card-text">
                                         <strong>CPU-Intel:</strong> Intel CORE i9-10900KF 5.30GHz LGA14A
                                         – procesor o <strong>najszybszym taktowaniu single-core</strong>.<br>
@@ -250,7 +250,7 @@
                             <div class="card me-3 h-100">
                                 <img src="assets/watercooling-small.jpg" class="card-img-top" alt="watercooling system">
                                 <div class="card-body">
-                                    <h5 class="card-title">System chłodzenia wodnego</h5>
+                                    <h4 class="card-title">System chłodzenia wodnego</h4>
                                     <p class="card-text"> Korzystamy z <strong>najnowocześniejszych systemów
                                             chłodzenia</strong>. <br>
                                         <strong>Przykład:</strong> <span class="cooling-name">Corsair iCUE H115i ELITE
@@ -266,7 +266,7 @@
                             <div class="card me-3 h-100">
                                 <img src="assets/design-pc-small.jpg" class="card-img-top" alt="design pc gamer">
                                 <div class="card-body">
-                                    <h5 class="card-title">Nowoczesny design naszych PC</h5>
+                                    <h4 class="card-title">Nowoczesny design naszych PC</h4>
                                     <p class="card-text">
                                         <strong>Sam wygląd naszych komputerów przyciąga uwagę</strong>. <br>
                                         <strong>Obudowa PC:</strong> <span class="case-name">Thermaltake Core P3
@@ -307,7 +307,7 @@
                             <img src="assets/graphics-card-big.jpg" class="d-block w-100"
                                 alt="gaming computer with powerful graphics card">
                             <div class="carousel-caption d-block">
-                                <h5>Karty graficzne</h5>
+                                <h4>Karty graficzne</h4>
                                 <p>
                                     Wydajne karty graficzne, które poradzą sobie z <strong>najbardziej wymagającymi
                                         grami</strong>. <br>
@@ -319,7 +319,7 @@
                         <div class="carousel-item">
                             <img src="assets/cpu-big.jpg" class="d-block w-100" alt="gaming computer with cpu">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Procesory z Intela lub AMD</h5>
+                                <h4>Procesory z Intela lub AMD</h4>
                                 <p>
                                     <strong>CPU-Intel:</strong> Intel CORE i9-10900KF 5.30GHz LGA14A
                                     – procesor o <strong>najszybszym taktowaniu single-core</strong>.<br>
@@ -331,7 +331,7 @@
                         <div class="carousel-item">
                             <img src="assets/watercooling-big.jpg" class="d-block w-100" alt="watercooling system">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>System chłodzenia wodnego</h5>
+                                <h4>System chłodzenia wodnego</h4>
                                 <p>
                                     Korzystamy z <strong>najnowocześniejszych systemów chłodzenia</strong>. <br>
                                     <strong>Przykład:</strong> <span class="cooling-name">Corsair iCUE H115i ELITE
@@ -345,7 +345,7 @@
                         <div class="carousel-item">
                             <img src="assets/design-pc-big.jpg" class="d-block w-100" alt="design pc gamer">
                             <div class="carousel-caption d-none d-md-block">
-                                <h5>Nowoczesny design naszych PC</h5>
+                                <h4>Nowoczesny design naszych PC</h4>
                                 <p>
                                     <strong>Sam wygląd naszych komputerów przyciąga uwagę</strong>. <br>
                                     <strong>Obudowa PC:</strong> <span class="case-name">Thermaltake Core P3 Tempered
@@ -577,9 +577,9 @@
 
                             </div>
                             <div class="card-footer d-flex justify-content-around">
-                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
-                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
-                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                                <a href="#" aria-label="Facebook"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#" aria-label="Twitter"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#" aria-label="LinkedIn"><i class="ti ti-brand-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -594,9 +594,9 @@
                                         supermożliwości.</span></p>
                             </div>
                             <div class="card-footer d-flex justify-content-around">
-                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
-                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
-                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                                <a href="#" aria-label="Facebook"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#" aria-label="Twitter"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#" aria-label="LinkedIn"><i class="ti ti-brand-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -611,9 +611,9 @@
                                         czytelników.</span></p>
                             </div>
                             <div class="card-footer d-flex justify-content-around">
-                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
-                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
-                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                                <a href="#" aria-label="Facebook"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#" aria-label="Twitter"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#" aria-label="LinkedIn"><i class="ti ti-brand-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -628,9 +628,9 @@
                                 </p>
                             </div>
                             <div class="card-footer d-flex justify-content-around">
-                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
-                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
-                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                                <a href="#" aria-label="Facebook"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#" aria-label="Twitter"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#" aria-label="LinkedIn"><i class="ti ti-brand-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -644,9 +644,9 @@
                                     między niezadowolonymi graczami.</p>
                             </div>
                             <div class="card-footer d-flex justify-content-around">
-                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
-                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
-                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                                <a href="#" aria-label="Facebook"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#" aria-label="Twitter"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#" aria-label="LinkedIn"><i class="ti ti-brand-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -662,9 +662,9 @@
                                     kontrolą.</p>
                             </div>
                             <div class="card-footer d-flex justify-content-around">
-                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
-                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
-                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                                <a href="#" aria-label="Facebook"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#" aria-label="Twitter"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#" aria-label="LinkedIn"><i class="ti ti-brand-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -678,9 +678,9 @@
                                     jej kreatywności i znajomości trendów nasze profile zawsze przyciągają uwagę.</p>
                             </div>
                             <div class="card-footer d-flex justify-content-around">
-                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
-                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
-                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                                <a href="#" aria-label="Facebook"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#" aria-label="Twitter"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#" aria-label="LinkedIn"><i class="ti ti-brand-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -695,9 +695,9 @@
                                 </p>
                             </div>
                             <div class="card-footer d-flex justify-content-around">
-                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
-                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
-                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                                <a href="#" aria-label="Facebook"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#" aria-label="Twitter"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#" aria-label="LinkedIn"><i class="ti ti-brand-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -712,9 +712,9 @@
                                     naszego sukcesu.</p>
                             </div>
                             <div class="card-footer d-flex justify-content-around">
-                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
-                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
-                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                                <a href="#" aria-label="Facebook"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#" aria-label="Twitter"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#" aria-label="LinkedIn"><i class="ti ti-brand-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -729,9 +729,9 @@
                                     się w GameHaven jak w domu.</p>
                             </div>
                             <div class="card-footer d-flex justify-content-around">
-                                <a href="#"><i class="ti ti-brand-facebook"></i></a>
-                                <a href="#"><i class="ti ti-brand-twitter"></i></a>
-                                <a href="#"><i class="ti ti-brand-linkedin"></i></a>
+                                <a href="#" aria-label="Facebook"><i class="ti ti-brand-facebook"></i></a>
+                                <a href="#" aria-label="Twitter"><i class="ti ti-brand-twitter"></i></a>
+                                <a href="#" aria-label="LinkedIn"><i class="ti ti-brand-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -810,15 +810,16 @@
                         <div class="social-media">
                             <h3 class="contact-title">Social Media</h3>
                             <div class="link-media">
-                                <a href="https://www.facebook.com/" target="_blank"><i
+                                <a href="https://www.facebook.com/" target="_blank" aria-label="Facebook"><i
                                         class="ti ti-brand-facebook"></i></a>
-                                <a href="https://www.twitter.com/" target="_blank"><i
+                                <a href="https://www.twitter.com/" target="_blank" aria-label="Twitter"><i
                                         class="ti ti-brand-twitter"></i></a>
-                                <a href="https://www.linkedin.com/" target="_blank"><i class="ti ti-brand-linkedin"></i>
+                                <a href="https://www.linkedin.com/" target="_blank" aria-label="LinkedIn"><i
+                                        class="ti ti-brand-linkedin"></i>
                                 </a>
-                                <a href="https://www.instagram.com/" target="_blank"><i
+                                <a href="https://www.instagram.com/" target="_blank" aria-label="Instagram"><i
                                         class="ti ti-brand-instagram"></i></a>
-                                <a href="https://www.youtube.com/" target="_blank"><i
+                                <a href="https://www.youtube.com/" target="_blank" aria-label="YouTube"><i
                                         class="ti ti-brand-youtube"></i></a>
                             </div>
                         </div>
