feat: generate env.js from Netlify environment variable for dynamic baseURL

--- a/public/index.html
+++ b/public/index.html
@@ -909,9 +909,9 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"
         defer></script>
 
-    <script src="https://gamehaven-fvun.onrender.com/env.js" defer></script>
-
+    <script src="/env.js" defer></script>
     <script type="module" src="/config/config-client.js"></script>
+
     <script type="module" src="/js/reservation.js"></script>
     <script type="module" src="/js/contact.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
