--- a/public/index.html
+++ b/public/index.html
@@ -78,8 +78,11 @@
     <nav id="navbar" class="navbar navbar-expand-lg position-fixed top-0 w-100">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/logoGameHaven.png" alt="Logo strony GameHaven" width="150" height="auto"
-                    fetchpriority="high" decoding="async" />
+                <picture>
+                    <source srcset="assets/logoGameHaven.webp" type="image/webp" />
+                    <img src="assets/logoGameHaven.png" alt="Logo strony GameHaven" width="150" height="auto"
+                        fetchpriority="high" decoding="async" />
+                </picture>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -220,8 +223,11 @@
                         <div class="col">
 
                             <div class="card me-3 h-100">
-                                <img src="assets/graphics-card-small.jpg" class="card-img-top "
-                                    alt="gaming computer with powerful graphics card">
+                                <picture>
+                                    <source srcset="assets/graphics-card-small.webp" type="image/webp" />
+                                    <img src="assets/graphics-card-small.jpg" class="card-img-top "
+                                        alt="gaming computer with powerful graphics card">
+                                </picture>
                                 <div class="card-body">
                                     <h4 class="card-title">Karty graficzne</h4>
                                     <p class="card-text">
@@ -236,7 +242,10 @@
                         <div class="col">
 
                             <div class="card me-3 h-100">
-                                <img src="assets/cpu-small.jpg" class="card-img-top" alt="gaming computer with cpu">
+                                <picture>
+                                    <source srcset="assets/cpu-small.webp" type="image/webp" />
+                                    <img src="assets/cpu-small.jpg" class="card-img-top" alt="gaming computer with cpu">
+                                </picture>
                                 <div class="card-body">
                                     <h4 class="card-title">Procesory z Intela lub AMD</h4>
                                     <p class="card-text">
@@ -251,7 +260,11 @@
 
                         <div class="col">
                             <div class="card me-3 h-100">
-                                <img src="assets/watercooling-small.jpg" class="card-img-top" alt="watercooling system">
+                                <picture>
+                                    <source srcset="assets/watercooling-small.webp" type="image/webp" />
+                                    <img src="assets/watercooling-small.jpg" class="card-img-top"
+                                        alt="watercooling system">
+                                </picture>
                                 <div class="card-body">
                                     <h4 class="card-title">System chłodzenia wodnego</h4>
                                     <p class="card-text"> Korzystamy z <strong>najnowocześniejszych systemów
@@ -267,7 +280,10 @@
                         </div>
                         <div class="col">
                             <div class="card me-3 h-100">
-                                <img src="assets/design-pc-small.jpg" class="card-img-top" alt="design pc gamer">
+                                <picture>
+                                    <source srcset="assets/design-pc-small.webp" type="image/webp" />
+                                    <img src="assets/design-pc-small.jpg" class="card-img-top" alt="design pc gamer">
+                                </picture>
                                 <div class="card-body">
                                     <h4 class="card-title">Nowoczesny design naszych PC</h4>
                                     <p class="card-text">
@@ -307,8 +323,11 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/graphics-card-big.jpg" class="d-block w-100"
-                                alt="gaming computer with powerful graphics card">
+                            <picture>
+                                <source srcset="assets/graphics-card-big.webp" type="image/webp" />
+                                <img src="assets/graphics-card-big.jpg" class="d-block w-100"
+                                    alt="gaming computer with powerful graphics card">
+                            </picture>
                             <div class="carousel-caption d-block">
                                 <h4>Karty graficzne</h4>
                                 <p>
@@ -320,7 +339,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/cpu-big.jpg" class="d-block w-100" alt="gaming computer with cpu">
+                            <picture>
+                                <source srcset="assets/cpu-big.webp" type="image/webp" />
+                                <img src="assets/cpu-big.jpg" class="d-block w-100" alt="gaming computer with cpu">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h4>Procesory z Intela lub AMD</h4>
                                 <p>
@@ -332,7 +354,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/watercooling-big.jpg" class="d-block w-100" alt="watercooling system">
+                            <picture>
+                                <source srcset="assets/watercooling-big.webp" type="image/webp" />
+                                <img src="assets/watercooling-big.jpg" class="d-block w-100" alt="watercooling system">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h4>System chłodzenia wodnego</h4>
                                 <p>
@@ -346,7 +371,10 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/design-pc-big.jpg" class="d-block w-100" alt="design pc gamer">
+                            <picture>
+                                <source srcset="assets/design-pc-big.webp" type="image/webp" />
+                                <img src="assets/design-pc-big.jpg" class="d-block w-100" alt="design pc gamer">
+                            </picture>
                             <div class="carousel-caption d-none d-md-block">
                                 <h4>Nowoczesny design naszych PC</h4>
                                 <p>
