--- a/public/index.html
+++ b/public/index.html
@@ -438,8 +438,11 @@
 
 
                             <div class="img-wrap img-pc">
-                                <img src="assets/img-prices/woman-small.jpg"
-                                    alt="Kobieta przy stanowisku gamingowym PC w GameHaven">
+                                <picture>
+                                    <source srcset="assets/img-prices/woman-small.webp" type="image/webp" />
+                                    <img src="assets/img-prices/woman-small.jpg"
+                                        alt="Kobieta przy stanowisku gamingowym PC w GameHaven">
+                                </picture>
                             </div>
 
                         </div>
@@ -461,7 +464,10 @@
                                 datę</button>
 
                             <div class="img-wrap img-ps">
-                                <img src="assets/img-prices/soccer-small.png" alt="Piłka na trawie">
+                                <picture>
+                                    <source srcset="assets/img-prices/soccer-small.webp" type="image/webp" />
+                                    <img src="assets/img-prices/soccer-small.png" alt="Piłka na trawie">
+                                </picture>
                             </div>
                         </div>
                     </div>
@@ -482,7 +488,10 @@
                                 datę</button>
 
                             <div class="img-wrap img-xbox">
-                                <img src="assets/img-prices/jaime-marrero-unsplash.jpg" alt="Stanowisko Xbox">
+                                <picture>
+                                    <source srcset="assets/img-prices/jaime-marrero-unsplash.webp" type="image/webp" />
+                                    <img src="assets/img-prices/jaime-marrero-unsplash.jpg" alt="Stanowisko Xbox">
+                                </picture>
                             </div>
 
                         </div>
@@ -601,7 +610,10 @@
 
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="assets/team/boy1.jpg" class="card-img-top img-fluid" alt="Amal - Tester gier">
+                            <picture>
+                                <source srcset="assets/team/boy1.webp" type="image/webp" />
+                                <img src="assets/team/boy1.jpg" class="card-img-top img-fluid" alt="Amal - Tester gier">
+                            </picture>
                             <div class="card-body ">
                                 <h5 class="card-title mb-3">Tester Gier</h5>
                                 <p class="card-text">Amal jest świetny w swojej dziedzinie; <span>żadne błędy w grach
@@ -617,8 +629,11 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="assets/team/man1.jpg" class="card-img-top img-fluid"
-                                alt="Jagdisz inżynier sprzętu komputerowego">
+                            <picture>
+                                <source srcset="assets/team/man1.webp" type="image/webp" />
+                                <img src="assets/team/man1.jpg" class="card-img-top img-fluid"
+                                    alt="Jagdisz inżynier sprzętu komputerowego">
+                            </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Inżynier sprzętu komputerowego</h5>
                                 <p class="card-text">Jagdisz, nasz najlepszy specjalista od wykrywania usterek w
@@ -634,8 +649,11 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="assets/team/portrait-woman1.jpg" class="card-img-top img-fluid"
-                                alt="Copywriter Ewa">
+                            <picture>
+                                <source srcset="assets/team/portrait-woman1.webp" type="image/webp" />
+                                <img src="assets/team/portrait-woman1.jpg" class="card-img-top img-fluid"
+                                    alt="Copywriter Ewa">
+                            </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Copywriter</h5>
                                 <p class="card-text">Ewa zajmuje się pisaniem blogów oraz zarządzaniem informacjami na
@@ -651,8 +669,11 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="assets/team/man3.jpg" class="card-img-top img-fluid"
-                                alt="Arkadiusz nasz dramaturg komputerowy">
+                            <picture>
+                                <source srcset="assets/team/man3.webp" type="image/webp" />
+                                <img src="assets/team/man3.jpg" class="card-img-top img-fluid"
+                                    alt="Arkadiusz nasz dramaturg komputerowy">
+                            </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Dramaturg komputerowy</h5>
                                 <p class="card-text">Arkadiusz to bardzo wrażliwa osoba, która dzięki swojej uważności
@@ -668,7 +689,10 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="assets/team/man4.jpg" class="card-img-top img-fluid" alt="Ochroniarz Paweł">
+                            <picture>
+                                <source srcset="assets/team/man4.webp" type="image/webp" />
+                                <img src="assets/team/man4.jpg" class="card-img-top img-fluid" alt="Ochroniarz Paweł">
+                            </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Ochroniarz Paweł</h5>
                                 <p class="card-text"><span>Ochroniarz naszego klubu GameHaven</span>, potrafi szybko
@@ -684,8 +708,11 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="assets/team/portrait-woman2.jpg" class="card-img-top img-fluid special-image-top"
-                                alt="Paulina księgowa GameHaven">
+                            <picture>
+                                <source srcset="assets/team/portrait-woman2.webp" type="image/webp" />
+                                <img src="assets/team/portrait-woman2.jpg"
+                                    class="card-img-top img-fluid special-image-top" alt="Paulina księgowa GameHaven">
+                            </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Paulina</h5>
                                 <p class="card-text">Paulina jest naszą księgową, która <span>dba o finanse
@@ -702,8 +729,11 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="assets/team/portrait-woman3.jpg" class="card-img-top img-fluid special-image"
-                                alt="Patrycja mistrzyni w social media">
+                            <picture>
+                                <source srcset="assets/team/portrait-woman3.webp" type="image/webp" />
+                                <img src="assets/team/portrait-woman3.jpg" class="card-img-top img-fluid special-image"
+                                    alt="Patrycja mistrzyni w social media">
+                            </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Specjalistka ds. Social Media</h5>
                                 <p class="card-text">Patrycja <span> dba o aktualne i angażujące treści.</span> Dzięki
@@ -718,8 +748,11 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="assets/team/portrait-man1.jpg" class="card-img-top img-fluid"
-                                alt="Piotr logistyk">
+                            <picture>
+                                <source srcset="assets/team/portrait-man1.webp" type="image/webp" />
+                                <img src="assets/team/portrait-man1.jpg" class="card-img-top img-fluid"
+                                    alt="Piotr logistyk">
+                            </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Specjalista ds. Logistyki</h5>
                                 <p class="card-text">Piotr <span> dba o sprawną realizację zamówień i zarządzanie
@@ -735,8 +768,11 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="assets/team/portrait-man2.jpg" class="card-img-top img-fluid"
-                                alt="Tomek organizuje eventy dla firmy GameHaven">
+                            <picture>
+                                <source srcset="assets/team/portrait-man2.webp" type="image/webp" />
+                                <img src="assets/team/portrait-man2.jpg" class="card-img-top img-fluid"
+                                    alt="Tomek organizuje eventy dla firmy GameHaven">
+                            </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Specjalista ds. Eventów</h5>
                                 <p class="card-text">Tomek <span> dba, aby każde wydarzenie w GameHaven było
@@ -752,8 +788,11 @@
                     </div>
                     <div class="swiper-slide">
                         <div class="card">
-                            <img src="assets/team/portrait-man3.jpg" class="card-img-top img-fluid"
-                                alt="Michał zarządza naszą strefą relaksu">
+                            <picture>
+                                <source srcset="assets/team/portrait-man3.webp" type="image/webp" />
+                                <img src="assets/team/portrait-man3.jpg" class="card-img-top img-fluid"
+                                    alt="Michał zarządza naszą strefą relaksu">
+                            </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Michał</h5>
                                 <p class="card-text">Michał to strażnik relaksu, <span>dba o nasz sklep i pokój
