webp file sizes reduced

--- a/public/index.html
+++ b/public/index.html
@@ -218,7 +218,8 @@
                             <div class="card me-3 h-100">
                                 <picture>
                                     <source srcset="assets/cpu-small.webp" type="image/webp" />
-                                    <img src="assets/cpu-small.jpg" class="card-img-top" alt="gaming computer with cpu">
+                                    <img src="assets/cpu-small.jpg" class="card-img-top" alt="gaming computer with cpu"
+                                        loading="lazy" width="401" height="300">
                                 </picture>
                                 <div class="card-body">
                                     <h4 class="card-title">Procesory z Intela lub AMD</h4>
@@ -237,7 +238,7 @@
                                 <picture>
                                     <source srcset="assets/watercooling-small.webp" type="image/webp" />
                                     <img src="assets/watercooling-small.jpg" class="card-img-top"
-                                        alt="watercooling system">
+                                        alt="watercooling system" loading="lazy" width="427" height="640">
                                 </picture>
                                 <div class="card-body">
                                     <h4 class="card-title">System chłodzenia wodnego</h4>
@@ -415,7 +416,8 @@
                                 <picture>
                                     <source srcset="assets/img-prices/woman-small.webp" type="image/webp" />
                                     <img src="assets/img-prices/woman-small.jpg"
-                                        alt="Kobieta przy stanowisku gamingowym PC w GameHaven">
+                                        alt="Kobieta przy stanowisku gamingowym PC w GameHaven" loading="lazy"
+                                        width="348" height="196">
                                 </picture>
                             </div>
 
@@ -464,7 +466,8 @@
                             <div class="img-wrap img-xbox">
                                 <picture>
                                     <source srcset="assets/img-prices/jaime-marrero-unsplash.webp" type="image/webp" />
-                                    <img src="assets/img-prices/jaime-marrero-unsplash.jpg" alt="Stanowisko Xbox">
+                                    <img src="assets/img-prices/jaime-marrero-unsplash.jpg" alt="Stanowisko Xbox"
+                                        loading="lazy" width="348" height="435">
                                 </picture>
                             </div>
 
@@ -585,8 +588,9 @@
                     <div class="swiper-slide">
                         <div class="card">
                             <picture>
-                                <source srcset="assets/team/boy1.webp" type="image/webp" />
-                                <img src="assets/team/boy1.jpg" class="card-img-top img-fluid" alt="Amal - Tester gier">
+                                <source srcset="assets/team/boy1-331.webp" type="image/webp" />
+                                <img src="assets/team/boy1.jpg" class="card-img-top img-fluid" alt="Amal - Tester gier"
+                                    loading="lazy" width="331" height="220" />
                             </picture>
                             <div class="card-body ">
                                 <h5 class="card-title mb-3">Tester Gier</h5>
@@ -604,9 +608,10 @@
                     <div class="swiper-slide">
                         <div class="card">
                             <picture>
-                                <source srcset="assets/team/man1.webp" type="image/webp" />
+                                <source srcset="assets/team/man1-330.webp" type="image/webp" />
                                 <img src="assets/team/man1.jpg" class="card-img-top img-fluid"
-                                    alt="Jagdisz inżynier sprzętu komputerowego">
+                                    alt="Jagdisz inżynier sprzętu komputerowego" loading="lazy" width="330"
+                                    height="220" />
                             </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Inżynier sprzętu komputerowego</h5>
@@ -626,7 +631,7 @@
                             <picture>
                                 <source srcset="assets/team/portrait-woman1.webp" type="image/webp" />
                                 <img src="assets/team/portrait-woman1.jpg" class="card-img-top img-fluid"
-                                    alt="Copywriter Ewa">
+                                    alt="Copywriter Ewa" loading="lazy" width="331" height="220">
                             </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Copywriter</h5>
@@ -644,10 +649,12 @@
                     <div class="swiper-slide">
                         <div class="card">
                             <picture>
-                                <source srcset="assets/team/man3.webp" type="image/webp" />
+                                <source srcset="assets/team/man3-300.webp" type="image/webp" />
                                 <img src="assets/team/man3.jpg" class="card-img-top img-fluid"
-                                    alt="Arkadiusz nasz dramaturg komputerowy">
+                                    alt="Arkadiusz nasz dramaturg komputerowy" loading="lazy" width="300"
+                                    height="243" />
                             </picture>
+
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Dramaturg komputerowy</h5>
                                 <p class="card-text">Arkadiusz to bardzo wrażliwa osoba, która dzięki swojej uważności
@@ -685,7 +692,8 @@
                             <picture>
                                 <source srcset="assets/team/portrait-woman2.webp" type="image/webp" />
                                 <img src="assets/team/portrait-woman2.jpg"
-                                    class="card-img-top img-fluid special-image-top" alt="Paulina księgowa GameHaven">
+                                    class="card-img-top img-fluid special-image-top" alt="Paulina księgowa GameHaven"
+                                    loading="lazy" width="427" height="640">
                             </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Paulina</h5>
@@ -725,7 +733,7 @@
                             <picture>
                                 <source srcset="assets/team/portrait-man1.webp" type="image/webp" />
                                 <img src="assets/team/portrait-man1.jpg" class="card-img-top img-fluid"
-                                    alt="Piotr logistyk">
+                                    alt="Piotr logistyk" loading="lazy" width="300" height="225">
                             </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Specjalista ds. Logistyki</h5>
@@ -745,7 +753,8 @@
                             <picture>
                                 <source srcset="assets/team/portrait-man2.webp" type="image/webp" />
                                 <img src="assets/team/portrait-man2.jpg" class="card-img-top img-fluid"
-                                    alt="Tomek organizuje eventy dla firmy GameHaven">
+                                    alt="Tomek organizuje eventy dla firmy GameHaven" loading="lazy" width="330"
+                                    height="220">
                             </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Specjalista ds. Eventów</h5>
@@ -765,7 +774,7 @@
                             <picture>
                                 <source srcset="assets/team/portrait-man3.webp" type="image/webp" />
                                 <img src="assets/team/portrait-man3.jpg" class="card-img-top img-fluid"
-                                    alt="Michał zarządza naszą strefą relaksu">
+                                    alt="Michał zarządza naszą strefą relaksu" loading="lazy" width="300" height="300">
                             </picture>
                             <div class="card-body">
                                 <h5 class="card-title mb-3">Michał</h5>
