--- a/public/index.html
+++ b/public/index.html
@@ -994,13 +994,13 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.7/js/bootstrap.min.js"
         integrity="sha512-zKeerWHHuP3ar7kX2WKBSENzb+GJytFSBL6HrR2nPSR1kOX1qjm+oHooQtbDpDBSITgyl7QXZApvDfDWvKjkUw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
 
     <script src="/env.js" defer></script>
-    <script type="module" src="/config/config-client.js"></script>
+    <script type="module" src="/config/config-client.js" defer></script>
 
-    <script type="module" src="/js/reservation.js"></script>
-    <script type="module" src="/js/contact.js"></script>
+    <script type="module" src="/js/reservation.js" defer></script>
+    <script type="module" src="/js/contact.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
 
